--- a/29_xtra/dommy.html
+++ b/29_xtra/dommy.html
@@ -1,3 +1,8 @@
+// Nahi Khan & Connor Oh
+// SoftDev pd9
+// K29 -- Sequential Progression III
+//2019-12-12
+
 <!DOCTYPE html>
 <!-- manipulating the DOM using JavaScript -->
 
